fix: prevent clipping

--- a/roles/dhis2.dhis2/files/resources/css/landing.css
+++ b/roles/dhis2.dhis2/files/resources/css/landing.css
@@ -196,7 +196,7 @@ a {
 }
 .installer{
     grid-row-start: 5;
-    grid-row-end: 7;
+    grid-row-end: 8;
 
 }
 .war{
